<resources>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="close">Close</string>
    <string name="attention">Attention</string>
    <string name="done">Done</string>
    <string name="search">Search</string>
    <string name="loginFormTitle">Provide your user details for the MyEpisodes.com website below.</string>
    <string name="loginFormRegister">New user?</string>
    <string name="loginUsernameHint">Username</string>
    <string name="loginPasswordHint">Password</string>
    <string name="loginLoginBtn">Login</string>
    <string name="loginStartLogin">Logging in to MyEpisodes.com</string>
    <string name="loginSuccessfullLogin">Successfully logged in</string>
    <string name="loginLoginFailed">Username or password incorrect, please try again!</string>
    <string name="registerFormTitle">Register here, fill in all your user details and click on register.</string>
    <string name="registerUsernameHint">Username</string>
    <string name="registerPasswordHint">Password</string>
    <string name="registerEmailHint">Email</string>
    <string name="registerBtn">Register</string>
    <string name="registerStart">Creating user for MyEpisodes.com</string>
    <string name="registerSuccessfull">Successfully created user!</string>
    <string name="registerFailed">Username already exists, please choose another username.</string>
    <string name="watch">Watch</string>
    <string name="watchhome">Watch (%d)</string>
    <string name="acquire">Acquire</string>
    <string name="acquirehome">Acquire (%d)</string>
    <string name="coming">Coming</string>
    <string name="more">More</string>
    <string name="watchListTitle">List of shows/episodes</string>
    <string name="watchListSubTitleWatch">%d episode to watch</string>
    <string name="watchListSubTitleAcquire">%d episode to acquire</string>
    <string name="watchListSubTitleComing">%d future episode</string>
    <string name="watchListSubTitleWatchPlural">%d episodes to watch</string>
    <string name="watchListSubTitleAcquirePlural">%d episodes to acquire</string>
    <string name="watchListSubTitleComingPlural">%d future episodes</string>
    <string name="watchListEmpty">No episodes found.</string>
    <string name="watchListFull">Reached the limit of 200 episodes, consider enabling 200+ episodes in preferences.</string>
    <string name="details">Details</string>
    <string name="episodeDetailsSeasonLabel">Season: </string>
    <string name="episodeDetailsEpisodeLabel">Episode: </string>
    <string name="episodeDetailsAirDateLabel">Airdate: </string>
    <string name="episodeDetailsAirDateLabelDateNotFound">Unsupported date format!</string>
	<string name="TweetTitle">Share</string>
    <string name="Tweet">I have watched \'%s\' #MyEpisodesManager #Android</string>
    <string name="randompickertext">The random episode picker demands you to watch: </string>
    <string name="addShow">Add Show</string>
    <string name="favouriteShows">Favourite Shows</string>
    <string name="ignoredShows">Ignored Shows</string>
    <string name="showSearchHint">Enter a show name...</string>
    <string name="showSearchNoSearchResults">No shows found</string>
    <string name="showSearchOneFound">show found</string>
    <string name="showSearchMoreFound">shows found</string>
    <string name="showSearchAddShow">Are you sure you want to add this show to your list of shows?</string>
    <string name="showSearchFinished">Are you done adding shows or do you want to continue?</string>
    <string name="favoIgnoredDeleteShow">Delete show</string>
    <string name="favoIgnoredIgnoreShow">Ignore show</string>
    <string name="favoIgnoredUnignoreShow">Unignore show</string>
    <string name="favoIgnoredConfirmationDeleteMessage">Are you sure you want to delete this show?</string>
    <string name="favoIgnoredConfirmationIgnoreMessage">Are you sure you want to ignore this show?</string>
    <string name="favoIgnoredConfirmationUnignoreMessage">Are you sure you want to unignore this show?</string>
	<string name="randompicker">Random Episode Picker</string>
	<string name="randompickershort">Random Picker</string>
    <string name="progressLoadingTitle">Loading...</string>
    <string name="progressLoadingBody">Sending/Retrieving data</string>
    <string name="aboutTitle">About...</string>
    <string name="aboutVersion">Version:</string>
    <string name="aboutLicense">License:</string>
    <string name="aboutWebsite">Website:</string>
    <string name="aboutEmail">Email:</string>
    <string name="aboutOriginalIdea">Original idea:</string>
    <string name="aboutProgrammer">Programmed by:</string>
    <string name="whatsNewTitle">What\'s new</string>
    <string name="whatsNewVersion">Version:</string>
    <string name="whatsNewText">What has changed:</string>
    <string-array name="whatsNewValues">
        
        <item>Disable Acquire / Coming</item>
        <item>Sort options</item>
        <item>Code refactoring</item>
        <item>New icons</item>
        <item>Enabled 200+ episodes</item>
    </string-array>
    <string name="logoutDialogTitle">Are you sure?</string>
    <string name="logoutDialogMessage">Your credentials will no longer be stored on the device.</string>
    <string name="refresh">Refresh</string>
    <string name="collapse">Collapse</string>
    <string name="home">Home</string>
    <string name="manageShows">Manage Shows</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="whatsNew">What\'s new</string>
    <string name="preferences">Preferences</string>
    <string name="menuShowMarkAcquired">Mark all episodes as Acquired</string>
    <string name="menuShowMarkWatched">Mark all episodes as Watched</string>
    <string name="menuEpisodeDetails">Details</string>
    <string name="menuEpisodeMarkAcquired">Mark Acquired</string>
    <string name="menuEpisodeMarkWatched">Mark Watched</string>
    <string name="menuTweet">Tweet this!</string>
    <string name="generalPreferences">General</string>
    <string name="showPreferences">Shows</string>
    <string name="orderPreferences">Order</string>
    <string name="disablePreferences">Disable</string>
    <string name="languagePreferences">Language</string>
    <string name="applyPreferences">Because settings are changed, the episodes will be refreshed now!</string>
    <string name="showWatchOrderPrompt">Order of watched shows</string>
    <string name="showAcquireOrderPrompt">Order of acquired shows</string>
    <string name="showComingOrderPrompt">Order of coming shows</string>
    <string-array name="showOrderOptions">
        <item>Default</item>
        <item>Ascending</item>
        <item>Descending</item>
        <item>By Date</item>
    </string-array>
    <string name="episodeOrderPrompt">Order of episodes</string>
    <string name="episodeOrderPromptExtra">Oldest or newest first...</string>
    <string-array name="episodeOrderOptions">
        <item>Oldest first</item>
        <item>Newest first</item>
    </string-array>
    <string name="daysBackwardEnable">Enable 200+ episodes</string>
    <string name="daysBackwardCP">Days Backward</string>
    <string name="daysBackwardCPExtra">Number of days backward to search for new episodes to watch</string>
    <string name="openAcquirePrompt">Acquire Settings</string>
    <string name="openAcquirePromptExtra">All shows or only shows of yesterday</string>
    <string-array name="openAcquireOptions">
            <item>All</item>
            <item>Only yesterday</item>
    </string-array>
    <string name="openDefaultPrompt">Default tab to open</string>
    <string name="openDefaultPromptExtra">Default tab to select when opening the application</string>
    <string-array name="openDefaultTabOptions">
            <item>Watch</item>
            <item>Acquire</item>
            <item>Coming</item>
    </string-array>
    <string name="ThemePrompt">Choose Theme</string>
    <string name="ThemePromptExtra">Select your theme</string>
    <string-array name="ThemeOptions">
            <item>Light</item>
            <item>Dark</item>
    </string-array>
    <string name="storePasswordPrompt">Store password</string>
    <string name="disableAcquire">Disable Acquire</string>
    <string name="disableComing">Disable Coming</string>
    <string name="showLanguagePrompt">Change Language</string>
    <string name="dialogOK">OK</string>
    <string name="fillInAllFields">All fields should be filled in!</string>
    <string name="exceptionDialogTitle">Ooops...</string>
    <string name="defaultExceptionMessage">Something went wrong. Try to restart the application and check your internet connection. If you keep having this issue report a bug at http://code.google.com/p/my-episodes-watch-manager/.</string>
    <string name="internetConnectionFailureTryAgain">Could not establish internet connection. Please try again!</string>
    <string name="internetConnectionFailureReload">Could not establish internet connection. Use the menu option to reload and try again.</string>
    <string name="networkIssues">Network error!\nCheck you network settings and try refreshing manually.</string>
    <string name="watchListUnableToReadFeed">Network error!\nTry to refresh manually.</string>
    <string name="watchListUnableToMarkWatched">Failed to mark this episode watched!\nCheck internet connection or refresh the list!</string>
    <string name="searchShowUnabletoAdd">Failed to add the show. Try again later. If this error keeps showing up please log an issue!</string>
    <string name="app_name">MyEpisodes Manager</string>
    <string name="aboutLicenseValue">GNU GPL V3 License</string>
    <string name="aboutOriginalIdeaValue">Dirk Vranckaert</string>
    <string name="aboutProgrammerValue">Ivo Janssen\nDirk Vranckaert</string>
    <string name="aboutWebsiteValue">http://code.google.com/p/my-episodes-watch-manager</string>
    <string name="aboutEmailValue">dirkvranckaert@gmail.com</string>
    <string name="whatsNewListPrefix">-</string>
    <string-array name="showOrderOptionsValues">
        <item>show_myepisodes_default_sort</item>
        <item>show_ascending_sort</item>
        <item>show_descending_sort</item>
        <item>show_by_date</item>
    </string-array>
    <string-array name="episodeOrderOptionsValues">
        <item>oldest_on_top</item>
        <item>newest_on_top</item>
    </string-array>
    <string-array name="ThemeValues">
            <item>0</item>
            <item>1</item>
    </string-array>
    <string-array name="AcquireValues">
            <item>0</item>
            <item>1</item>
    </string-array>
    <string-array name="showLanguageOptionsValues">
        <item>nl</item>
        <item>en</item>
        <item>fr</item>
        <item>de</item>
        <item>hu</item>
        <item>it</item>
        <item>lv</item>
        <item>pt</item>
        <item>es</item>
        <item>sv</item>
    </string-array>
    <string-array name="showLanguageOptions">
        <item>Dutch</item>
        <item>English</item>
        <item>French</item>
        <item>German</item>
        <item>Hungarian</item>
        <item>Italian</item>
        <item>Latvian</item>
        <item>Portuguese</item>
        <item>Spanish</item>
        <item>Swedish</item>
    </string-array>
</resources>