<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home_root"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
     <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="6dip">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button android:id="@+id/btn_watched"
                style="@style/HomeButton"
                android:text="@string/watchhome"
                android:drawableTop="@drawable/btn_watched"/>
            <Button android:id="@+id/btn_acquired"
                style="@style/HomeButton"
                android:text="@string/acquirehome"
                android:drawableTop="@drawable/btn_acquired"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button android:id="@+id/btn_coming"
                style="@style/HomeButton"
                android:text="@string/coming"
                android:drawableTop="@drawable/btn_coming"/>
            <Button android:id="@+id/btn_settings"
                style="@style/HomeButton"
                android:text="@string/manageShows"
                android:drawableTop="@drawable/btn_settings"
                android:onClick="onManageClick" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button android:id="@+id/btn_logout"
                style="@style/HomeButton"
                android:text="@string/logout"
                android:drawableTop="@drawable/btn_logout"
                android:onClick="onLogoutClick" />
            <Button android:id="@+id/btn_more"
                style="@style/HomeButton"
                android:text="@string/more"
                android:drawableTop="@drawable/btn_more"/>
        </LinearLayout>
    </LinearLayout>
    
</LinearLayout>
