<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFF"
    >
    
	<ScrollView android:id="@+id/ScrollView01" 
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent"
	>

	<LinearLayout android:id="@+id/LinearLayout01" 
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent"
		android:orientation="vertical"
	>
		
	<ImageView android:id="@+id/ImageView01"
		android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:src="@drawable/header"
	/>

	<TextView
		android:id="@+id/loginFormTitle"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:textColor="#000"
		android:padding="15px"
		android:text="@string/loginFormTitle"
	/>
	
	<EditText
		android:id="@+id/loginUsername"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:password="false"
		android:hint="@string/loginUsernameHint"
	/>

	<EditText
		android:id="@+id/loginPassword"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:password="true"
		android:hint="@string/loginPasswordHint"
	/>
	
	<Button
		android:id="@+id/loginLogin"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/loginLoginBtn"
	/>

	</LinearLayout>
	</ScrollView>
</LinearLayout>