<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home_root"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout style="@style/TitleBar">
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/home"
            android:src="@drawable/ic_title_home"
            android:onClick="onHomeClick" />

        <ImageView style="@style/TitleBarSeparator" />
        <ImageView style="@style/TitleBarLogo"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo" />

        <View style="@style/TitleBarSpring" />

        <!-- <ImageView style="@style/TitleBarSeparator" />
        <ImageButton style="@style/TitleBarAction"
            android:id="@+id/btn_title_refresh"
            android:contentDescription="@string/refresh"
            android:src="@drawable/refresh"
            android:onClick="onRefreshClick" />
        <ProgressBar style="@style/TitleBarProgressIndicator"
            android:id="@+id/title_refresh_progress"
            android:visibility="gone" /> -->
    </LinearLayout>

     <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="6dip">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button android:id="@+id/btn_watched"
                style="@style/HomeButton"
                android:text="@string/about"
                android:drawableTop="@drawable/btn_about"
                android:onClick="onAboutClick"/>
            <Button android:id="@+id/btn_acquired"
                style="@style/HomeButton"
                android:text="@string/whatsNew"
                android:drawableTop="@drawable/btn_new"
                android:onClick="onTodoClick"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button android:id="@+id/btn_coming"
                style="@style/HomeButton"
                android:text="@string/randompicker"
                android:drawableTop="@drawable/btn_random"
                android:onClick="onRandomClick"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
