<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home_root"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout style="@style/TitleBar">
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/home"
            android:src="@drawable/ic_title_home"
            android:onClick="onHomeClick" />

        <ImageView style="@style/TitleBarSeparator" />
        <TextView style="@style/TitleBarText" />
    </LinearLayout>

     <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="6dip">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button android:id="@+id/selectionPanelFavoShows"
                style="@style/HomeButton"
                android:text="@string/favouriteShows"
                android:drawableTop="@drawable/ic_menu_star"/>
            <Button android:id="@+id/selectionPanelIgnoredShows"
                style="@style/HomeButton"
                android:text="@string/ignoredShows"
                android:drawableTop="@drawable/ic_menu_stop"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button android:id="@+id/selectionPanelAddShows"
                style="@style/HomeButton"
                android:text="@string/addShow"
                android:drawableTop="@drawable/ic_menu_add"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
