<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="fill_parent"
                 android:orientation="vertical"
                 android:layout_height="fill_parent">
                 
    <LinearLayout style="@style/TitleBar">
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/home"
            android:src="@drawable/ic_title_home"
            android:onClick="onHomeClick" />

        <ImageView style="@style/TitleBarSeparator" />
        <TextView style="@style/TitleBarText" />
    </LinearLayout>
                 
    <TableLayout android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
        <TableRow>
            <LinearLayout android:orientation="vertical"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:padding="10dp"
                          android:id="@+id/selectionPanelFavoShows">
                <ImageView android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:src="@drawable/ic_menu_favorite"
                             android:layout_gravity="center_horizontal"/>
                <TextView android:layout_height="wrap_content"
                          android:layout_width="wrap_content"
                          android:text="@string/favouriteShows"
                          android:layout_gravity="center_horizontal"/>
            </LinearLayout>

            <LinearLayout android:orientation="vertical"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:padding="10dp"
                          android:id="@+id/selectionPanelIgnoredShows">
                <ImageView android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:src="@drawable/ic_menu_stop"
                             android:layout_gravity="center_horizontal"/>
                <TextView android:layout_height="wrap_content"
                          android:layout_width="wrap_content"
                          android:text="@string/ignoredShows"
                          android:layout_gravity="center_horizontal"/>
            </LinearLayout>
        </TableRow>
        <TableRow>
            <LinearLayout android:orientation="vertical"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:padding="10dp"
                          android:id="@+id/selectionPanelAddShows">
                <ImageView android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:src="@android:drawable/ic_menu_add"
                             android:layout_gravity="center_horizontal"/>
                <TextView android:layout_height="wrap_content"
                          android:layout_width="wrap_content"
                          android:text="@string/addShow"
                          android:layout_gravity="center_horizontal"/>
            </LinearLayout>
        </TableRow>
    </TableLayout>
</LinearLayout>